
Mon Jul 18, 2011 : Released Refine 1.8.0 (requires >= FUN3D-52844 (11.x.x)).

- fortran bindings extended for load balancing (gridgetmap_, 
   gridgetfreezestate_, and gridgetnaux_)

Thu Jul 7, 2011 : Released Refine 1.7.1 (requires >= FUN3D-52844 (11.x.x)).

- gridParallelPreProject only removes two and three face cells

Mon Apr 4, 2011 : Released Refine 1.7.0 (requires >= FUN3D-52844 (11.x.x)).

- This minor rev bump is an API change to elimiate global cell indexes and
    to restructure cell and face API for future mixed-element capability.
- compiled under Mac OS X
- pruned many unused methods

Fri Jan 21, 2011 : Released Refine 1.6.3 (requires >= FUN3D-45226 (11.0.0)).

- prevent NaN in volume node smoothing when faces are aligned. (was fixed
   for surface nodes Feb 7, 2005)

Thu Dec 23, 2010 : Released Refine 1.6.2 (requires >= FUN3D-45226 (11.0.0)).

- improved map (metric) and aux data interpolation durring edge collapse.

Fri Dec 10, 2010: Released Refine 1.6.1 (requires >= FUN3D-45226 (11.0.0)).

- fix bug in setting new node imesh for overset grid systems.
   (reported by Rajiv Shenoy of GA Tech)

Wed Oct 6, 2010: Released Refine 1.6.0 (requires >= FUN3D-45226 (11.0.0)).

- This minor rev bump is an API change to include imesh get/set to
    enable the use of overset grid systems.
- FAUXGeom cylinder pole direction can be flipped with sign of radius.

Tue Aug 24, 2010: Released Refine 1.5.2 (requires >= FUN3D-45226 (11.0.0)).

- fixed configure

Tue Aug 24, 2010: Released Refine 1.5.1 (requires >= FUN3D-45226 (11.0.0)).

- Changed the parallel node insertion and removal algorithm
    to be more consistant when sweeping through grid.
   (thanks to Rajiv Shenoy and James Cook of GA Tech for suggestion)
- Added refine-convert to convert grid file types.
- Mesh3D (Karman) and Fieldview import
- Elimiated intel version 10 compiler warnings.
- Fixed bug that would 'kink' geometry edges with FAUXGeom.