@@ -1,4 +1,8 @@
 
+Future : Released Refine 1.8.1 (requires >= FUN3D-52844 (11.x.x)).
+
+- removed unused gridJoinUnusedNodeGlobal
+
 Mon Jul 18, 2011 : Released Refine 1.8.0 (requires >= FUN3D-52844 (11.x.x)).
 
 - fortran bindings extended for load balancing (gridgetmap_, 
